Fixed the caption class (Ex: https://en.wikipedia.org/wiki/Help:Table_caption#:~:text=The%20caption%20tag%20is%20used,of%20the%20%22align%22%20parameter.) Fixed the collapse button

--- a/wikipedia-dark.user.css
+++ b/wikipedia-dark.user.css
@@ -425,8 +425,17 @@
   .tracklist th[scope="col"] {
     background-color: var(--gray-3) !important;
   }
-
-  
+  caption {
+    background-color: var(--gray-3) !important;
+    border-color: var(--gray-5) !important;
+  }
+  button.mw-collapsible-toggle {
+    border-color: var(--gray-5);
+  }
+  button.mw-collapsible-toggle::after,
+  button.mw-collapsible-toggle::before {
+    color: var(--gray-5);
+  }
   .tracklist-total-length span,
   .tracklist-total-length td {
     background-color: var(--gray-3) !important;
@@ -437,7 +446,6 @@
   .infobox-header {
     border-color: var(--gray-5) !important;
   }
-
   td[style*="background:#FFB" i] {
     background: var(--yellow-2) !important;
   }
